[gd_scene load_steps=24 format=3 uid="uid://be1vnlohnon13"]

[ext_resource type="Script" path="res://Scenes/Characters/TownGuards/generic.gd" id="1_of6vm"]
[ext_resource type="Texture2D" uid="uid://787pn504xpuv" path="res://Assets/characters/townGuard.png" id="2_af06o"]
[ext_resource type="Texture2D" uid="uid://ci8jp8twikvt3" path="res://Assets/Misc/speechBubble.png" id="3_i4aya"]

[sub_resource type="AtlasTexture" id="AtlasTexture_88wux"]
atlas = ExtResource("2_af06o")
region = Rect2(96, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q31as"]
atlas = ExtResource("2_af06o")
region = Rect2(0, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0ufh"]
atlas = ExtResource("2_af06o")
region = Rect2(32, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_idivh"]
atlas = ExtResource("2_af06o")
region = Rect2(64, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhy4t"]
atlas = ExtResource("2_af06o")
region = Rect2(96, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4aq7d"]
atlas = ExtResource("2_af06o")
region = Rect2(0, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tovjd"]
atlas = ExtResource("2_af06o")
region = Rect2(32, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0hoo"]
atlas = ExtResource("2_af06o")
region = Rect2(64, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l218p"]
atlas = ExtResource("2_af06o")
region = Rect2(96, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_87ynm"]
atlas = ExtResource("2_af06o")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l8n7d"]
atlas = ExtResource("2_af06o")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbm8l"]
atlas = ExtResource("2_af06o")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2h3uv"]
atlas = ExtResource("2_af06o")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2biu"]
atlas = ExtResource("2_af06o")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o227i"]
atlas = ExtResource("2_af06o")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ncp5t"]
atlas = ExtResource("2_af06o")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lpqnl"]
atlas = ExtResource("2_af06o")
region = Rect2(96, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_q3fgw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_88wux")
}],
"loop": true,
"name": &"Dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q31as")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0ufh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_idivh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhy4t")
}],
"loop": true,
"name": &"Dying",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4aq7d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tovjd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0hoo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l218p")
}],
"loop": true,
"name": &"Hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_87ynm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l8n7d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbm8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2h3uv")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2biu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o227i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ncp5t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lpqnl")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6abeq"]
size = Vector2(13.5, 9.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6fyj6"]
size = Vector2(7, 7)

[node name="TownGuard" type="CharacterBody2D" node_paths=PackedStringArray("spriteSheet")]
scale = Vector2(2, 2)
collision_layer = 4
collision_mask = 3
script = ExtResource("1_of6vm")
spriteSheet = NodePath("AnimatedSprite2D")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_q3fgw")
animation = &"Walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.75, 7.25)
shape = SubResource("RectangleShape2D_6abeq")

[node name="InteractBubble" type="TextureRect" parent="."]
visible = false
offset_left = -1.0
offset_top = -8.0
offset_right = 15.0
texture = ExtResource("3_i4aya")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(9.5, 8)
shape = SubResource("RectangleShape2D_6fyj6")
debug_color = Color(0.882353, 0.294118, 0.427451, 0.419608)

[connection signal="body_entered" from="Area2D" to="." method="_on_interact_area_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_interact_area_exited"]
